T2-Mariana_Dourado/goianinha.sintatico.output
Estado 118 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: Programa $end

    1 Programa: DeclFuncVar DeclProg

    2 DeclFuncVar: Tipo ID DeclVar PONTOVIRGULA DeclFuncVar
    3            | Tipo ID DeclFunc DeclFuncVar
    4            | ε

    5 DeclProg: PROGRAMA Bloco

    6 DeclVar: VIRGULA ID DeclVar
    7        | ε

    8 DeclFunc: ABREPARENT ListaParametros FECHAPARENT Bloco

    9 ListaParametros: ε
   10                | ListaParametrosCont

   11 ListaParametrosCont: Tipo ID
   12                    | Tipo ID VIRGULA ListaParametrosCont

   13 Bloco: ABRECHAVE ListaDeclVar ListaComando FECHACHAVE

   14 ListaDeclVar: ε
   15             | Tipo ID DeclVar PONTOVIRGULA ListaDeclVar

   16 Tipo: INT
   17     | CAR

   18 ListaComando: Comando
   19             | Comando ListaComando

   20 Comando: PONTOVIRGULA
   21        | Expr PONTOVIRGULA
   22        | RETORNE Expr PONTOVIRGULA
   23        | LEIA ID PONTOVIRGULA
   24        | ESCREVA Expr PONTOVIRGULA
   25        | ESCREVA CONSTSTRING PONTOVIRGULA
   26        | NOVALINHA PONTOVIRGULA
   27        | SE ABREPARENT Expr FECHAPARENT ENTAO Comando
   28        | SE ABREPARENT Expr FECHAPARENT ENTAO Comando SENAO Comando
   29        | ENQUANTO ABREPARENT Expr FECHAPARENT EXECUTE Comando
   30        | Bloco

   31 Expr: OrExpr
   32     | ID RECEBE Expr

   33 OrExpr: OrExpr OU AndExpr
   34       | AndExpr

   35 AndExpr: AndExpr E EqExpr
   36        | EqExpr

   37 EqExpr: EqExpr EQ DesigExpr
   38       | EqExpr NEQ DesigExpr
   39       | DesigExpr

   40 DesigExpr: DesigExpr MENOR AddExpr
   41          | DesigExpr MAIOR AddExpr
   42          | DesigExpr GEQ AddExpr
   43          | DesigExpr LEQ AddExpr
   44          | AddExpr

   45 AddExpr: AddExpr MAIS MulExpr
   46        | AddExpr MENOS MulExpr
   47        | MulExpr

   48 MulExpr: MulExpr VEZES UnExpr
   49        | MulExpr DIVIDE UnExpr
   50        | UnExpr

   51 UnExpr: MENOS PrimExpr
   52       | NEG PrimExpr
   53       | PrimExpr

   54 PrimExpr: ID ABREPARENT ListExpr FECHAPARENT
   55         | ID ABREPARENT FECHAPARENT
   56         | ID
   57         | CARCONST
   58         | INTCONST
   59         | ABREPARENT Expr FECHAPARENT

   60 ListExpr: Expr
   61         | ListExpr VIRGULA Expr


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    PROGRAMA (258) 5
    INT (259) 16
    CAR (260) 17
    LEIA (261) 23
    ESCREVA (262) 24 25
    NOVALINHA (263) 26
    RETORNE (264) 22
    INTCONST <intval> (265) 58
    CARCONST <charval> (266) 57
    ID <string> (267) 2 3 6 11 12 15 23 32 54 55 56
    CONSTSTRING <string> (268) 25
    SE (269) 27 28
    ENTAO (270) 27 28
    SENAO (271) 28
    ENQUANTO (272) 29
    EXECUTE (273) 29
    OU (274) 33
    E (275) 35
    NEG (276) 52
    EQ (277) 37
    NEQ (278) 38
    LEQ (279) 43
    GEQ (280) 42
    MENOR (281) 40
    MAIOR (282) 41
    RECEBE (283) 32
    MAIS (284) 45
    MENOS (285) 46 51
    VEZES (286) 48
    DIVIDE (287) 49
    PONTOVIRGULA (288) 2 15 20 21 22 23 24 25 26
    VIRGULA (289) 6 12 61
    ABREPARENT (290) 8 27 28 29 54 55 59
    FECHAPARENT (291) 8 27 28 29 54 55 59
    ABRECHAVE (292) 13
    FECHACHAVE (293) 13


Não terminais com as regras onde eles aparecem

    $accept (39)
        à esquerda: 0
    Programa (40)
        à esquerda: 1
        à direita: 0
    DeclFuncVar (41)
        à esquerda: 2 3 4
        à direita: 1 2 3
    DeclProg (42)
        à esquerda: 5
        à direita: 1
    DeclVar (43)
        à esquerda: 6 7
        à direita: 2 6 15
    DeclFunc (44)
        à esquerda: 8
        à direita: 3
    ListaParametros (45)
        à esquerda: 9 10
        à direita: 8
    ListaParametrosCont (46)
        à esquerda: 11 12
        à direita: 10 12
    Bloco (47)
        à esquerda: 13
        à direita: 5 8 30
    ListaDeclVar (48)
        à esquerda: 14 15
        à direita: 13 15
    Tipo (49)
        à esquerda: 16 17
        à direita: 2 3 11 12 15
    ListaComando (50)
        à esquerda: 18 19
        à direita: 13 19
    Comando (51)
        à esquerda: 20 21 22 23 24 25 26 27 28 29 30
        à direita: 18 19 27 28 29
    Expr (52)
        à esquerda: 31 32
        à direita: 21 22 24 27 28 29 32 59 60 61
    OrExpr (53)
        à esquerda: 33 34
        à direita: 31 33
    AndExpr (54)
        à esquerda: 35 36
        à direita: 33 34 35
    EqExpr (55)
        à esquerda: 37 38 39
        à direita: 35 36 37 38
    DesigExpr (56)
        à esquerda: 40 41 42 43 44
        à direita: 37 38 39 40 41 42 43
    AddExpr (57)
        à esquerda: 45 46 47
        à direita: 40 41 42 43 44 45 46
    MulExpr (58)
        à esquerda: 48 49 50
        à direita: 45 46 47 48 49
    UnExpr (59)
        à esquerda: 51 52 53
        à direita: 48 49 50
    PrimExpr (60)
        à esquerda: 54 55 56 57 58 59
        à direita: 51 52 53
    ListExpr (61)
        à esquerda: 60 61
        à direita: 54 61


Estado 0

    0 $accept: • Programa $end

    INT  deslocar, e ir ao estado 1
    CAR  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 4 (DeclFuncVar)

    Programa     ir ao estado 3
    DeclFuncVar  ir ao estado 4
    Tipo         ir ao estado 5


Estado 1

   16 Tipo: INT •

    $padrão  reduzir usando a regra 16 (Tipo)


Estado 2

   17 Tipo: CAR •

    $padrão  reduzir usando a regra 17 (Tipo)


Estado 3

    0 $accept: Programa • $end

    $end  deslocar, e ir ao estado 6


Estado 4

    1 Programa: DeclFuncVar • DeclProg

    PROGRAMA  deslocar, e ir ao estado 7

    DeclProg  ir ao estado 8


Estado 5

    2 DeclFuncVar: Tipo • ID DeclVar PONTOVIRGULA DeclFuncVar
    3            | Tipo • ID DeclFunc DeclFuncVar

    ID  deslocar, e ir ao estado 9


Estado 6

    0 $accept: Programa $end •

    $padrão  aceitar


Estado 7

    5 DeclProg: PROGRAMA • Bloco

    ABRECHAVE  deslocar, e ir ao estado 10

    Bloco  ir ao estado 11


Estado 8

    1 Programa: DeclFuncVar DeclProg •

    $padrão  reduzir usando a regra 1 (Programa)


Estado 9

    2 DeclFuncVar: Tipo ID • DeclVar PONTOVIRGULA DeclFuncVar
    3            | Tipo ID • DeclFunc DeclFuncVar

    VIRGULA     deslocar, e ir ao estado 12
    ABREPARENT  deslocar, e ir ao estado 13

    $padrão  reduzir usando a regra 7 (DeclVar)

    DeclVar   ir ao estado 14
    DeclFunc  ir ao estado 15


Estado 10

   13 Bloco: ABRECHAVE • ListaDeclVar ListaComando FECHACHAVE

    INT  deslocar, e ir ao estado 1
    CAR  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 14 (ListaDeclVar)

    ListaDeclVar  ir ao estado 16
    Tipo          ir ao estado 17


Estado 11

    5 DeclProg: PROGRAMA Bloco •

    $padrão  reduzir usando a regra 5 (DeclProg)


Estado 12

    6 DeclVar: VIRGULA • ID DeclVar

    ID  deslocar, e ir ao estado 18


Estado 13

    8 DeclFunc: ABREPARENT • ListaParametros FECHAPARENT Bloco

    INT  deslocar, e ir ao estado 1
    CAR  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 9 (ListaParametros)

    ListaParametros      ir ao estado 19
    ListaParametrosCont  ir ao estado 20
    Tipo                 ir ao estado 21


Estado 14

    2 DeclFuncVar: Tipo ID DeclVar • PONTOVIRGULA DeclFuncVar

    PONTOVIRGULA  deslocar, e ir ao estado 22


Estado 15

    3 DeclFuncVar: Tipo ID DeclFunc • DeclFuncVar

    INT  deslocar, e ir ao estado 1
    CAR  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 4 (DeclFuncVar)

    DeclFuncVar  ir ao estado 23
    Tipo         ir ao estado 5


Estado 16

   13 Bloco: ABRECHAVE ListaDeclVar • ListaComando FECHACHAVE

    LEIA          deslocar, e ir ao estado 24
    ESCREVA       deslocar, e ir ao estado 25
    NOVALINHA     deslocar, e ir ao estado 26
    RETORNE       deslocar, e ir ao estado 27
    INTCONST      deslocar, e ir ao estado 28
    CARCONST      deslocar, e ir ao estado 29
    ID            deslocar, e ir ao estado 30
    SE            deslocar, e ir ao estado 31
    ENQUANTO      deslocar, e ir ao estado 32
    NEG           deslocar, e ir ao estado 33
    MENOS         deslocar, e ir ao estado 34
    PONTOVIRGULA  deslocar, e ir ao estado 35
    ABREPARENT    deslocar, e ir ao estado 36
    ABRECHAVE     deslocar, e ir ao estado 10

    Bloco         ir ao estado 37
    ListaComando  ir ao estado 38
    Comando       ir ao estado 39
    Expr          ir ao estado 40
    OrExpr        ir ao estado 41
    AndExpr       ir ao estado 42
    EqExpr        ir ao estado 43
    DesigExpr     ir ao estado 44
    AddExpr       ir ao estado 45
    MulExpr       ir ao estado 46
    UnExpr        ir ao estado 47
    PrimExpr      ir ao estado 48


Estado 17

   15 ListaDeclVar: Tipo • ID DeclVar PONTOVIRGULA ListaDeclVar

    ID  deslocar, e ir ao estado 49


Estado 18

    6 DeclVar: VIRGULA ID • DeclVar

    VIRGULA  deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 7 (DeclVar)

    DeclVar  ir ao estado 50


Estado 19

    8 DeclFunc: ABREPARENT ListaParametros • FECHAPARENT Bloco

    FECHAPARENT  deslocar, e ir ao estado 51


Estado 20

   10 ListaParametros: ListaParametrosCont •

    $padrão  reduzir usando a regra 10 (ListaParametros)


Estado 21

   11 ListaParametrosCont: Tipo • ID
   12                    | Tipo • ID VIRGULA ListaParametrosCont

    ID  deslocar, e ir ao estado 52


Estado 22

    2 DeclFuncVar: Tipo ID DeclVar PONTOVIRGULA • DeclFuncVar

    INT  deslocar, e ir ao estado 1
    CAR  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 4 (DeclFuncVar)

    DeclFuncVar  ir ao estado 53
    Tipo         ir ao estado 5


Estado 23

    3 DeclFuncVar: Tipo ID DeclFunc DeclFuncVar •

    $padrão  reduzir usando a regra 3 (DeclFuncVar)


Estado 24

   23 Comando: LEIA • ID PONTOVIRGULA

    ID  deslocar, e ir ao estado 54


Estado 25

   24 Comando: ESCREVA • Expr PONTOVIRGULA
   25        | ESCREVA • CONSTSTRING PONTOVIRGULA

    INTCONST     deslocar, e ir ao estado 28
    CARCONST     deslocar, e ir ao estado 29
    ID           deslocar, e ir ao estado 30
    CONSTSTRING  deslocar, e ir ao estado 55
    NEG          deslocar, e ir ao estado 33
    MENOS        deslocar, e ir ao estado 34
    ABREPARENT   deslocar, e ir ao estado 36

    Expr       ir ao estado 56
    OrExpr     ir ao estado 41
    AndExpr    ir ao estado 42
    EqExpr     ir ao estado 43
    DesigExpr  ir ao estado 44
    AddExpr    ir ao estado 45
    MulExpr    ir ao estado 46
    UnExpr     ir ao estado 47
    PrimExpr   ir ao estado 48


Estado 26

   26 Comando: NOVALINHA • PONTOVIRGULA

    PONTOVIRGULA  deslocar, e ir ao estado 57


Estado 27

   22 Comando: RETORNE • Expr PONTOVIRGULA

    INTCONST    deslocar, e ir ao estado 28
    CARCONST    deslocar, e ir ao estado 29
    ID          deslocar, e ir ao estado 30
    NEG         deslocar, e ir ao estado 33
    MENOS       deslocar, e ir ao estado 34
    ABREPARENT  deslocar, e ir ao estado 36

    Expr       ir ao estado 58
    OrExpr     ir ao estado 41
    AndExpr    ir ao estado 42
    EqExpr     ir ao estado 43
    DesigExpr  ir ao estado 44
    AddExpr    ir ao estado 45
    MulExpr    ir ao estado 46
    UnExpr     ir ao estado 47
    PrimExpr   ir ao estado 48


Estado 28

   58 PrimExpr: INTCONST •

    $padrão  reduzir usando a regra 58 (PrimExpr)


Estado 29

   57 PrimExpr: CARCONST •

    $padrão  reduzir usando a regra 57 (PrimExpr)


Estado 30

   32 Expr: ID • RECEBE Expr
   54 PrimExpr: ID • ABREPARENT ListExpr FECHAPARENT
   55         | ID • ABREPARENT FECHAPARENT
   56         | ID •

    RECEBE      deslocar, e ir ao estado 59
    ABREPARENT  deslocar, e ir ao estado 60

    $padrão  reduzir usando a regra 56 (PrimExpr)


Estado 31

   27 Comando: SE • ABREPARENT Expr FECHAPARENT ENTAO Comando
   28        | SE • ABREPARENT Expr FECHAPARENT ENTAO Comando SENAO Comando

    ABREPARENT  deslocar, e ir ao estado 61


Estado 32

   29 Comando: ENQUANTO • ABREPARENT Expr FECHAPARENT EXECUTE Comando

    ABREPARENT  deslocar, e ir ao estado 62


Estado 33

   52 UnExpr: NEG • PrimExpr

    INTCONST    deslocar, e ir ao estado 28
    CARCONST    deslocar, e ir ao estado 29
    ID          deslocar, e ir ao estado 63
    ABREPARENT  deslocar, e ir ao estado 36

    PrimExpr  ir ao estado 64


Estado 34

   51 UnExpr: MENOS • PrimExpr

    INTCONST    deslocar, e ir ao estado 28
    CARCONST    deslocar, e ir ao estado 29
    ID          deslocar, e ir ao estado 63
    ABREPARENT  deslocar, e ir ao estado 36

    PrimExpr  ir ao estado 65


Estado 35

   20 Comando: PONTOVIRGULA •

    $padrão  reduzir usando a regra 20 (Comando)


Estado 36

   59 PrimExpr: ABREPARENT • Expr FECHAPARENT

    INTCONST    deslocar, e ir ao estado 28
    CARCONST    deslocar, e ir ao estado 29
    ID          deslocar, e ir ao estado 30
    NEG         deslocar, e ir ao estado 33
    MENOS       deslocar, e ir ao estado 34
    ABREPARENT  deslocar, e ir ao estado 36

    Expr       ir ao estado 66
    OrExpr     ir ao estado 41
    AndExpr    ir ao estado 42
    EqExpr     ir ao estado 43
    DesigExpr  ir ao estado 44
    AddExpr    ir ao estado 45
    MulExpr    ir ao estado 46
    UnExpr     ir ao estado 47
    PrimExpr   ir ao estado 48


Estado 37

   30 Comando: Bloco •

    $padrão  reduzir usando a regra 30 (Comando)


Estado 38

   13 Bloco: ABRECHAVE ListaDeclVar ListaComando • FECHACHAVE

    FECHACHAVE  deslocar, e ir ao estado 67


Estado 39

   18 ListaComando: Comando •
   19             | Comando • ListaComando

    LEIA          deslocar, e ir ao estado 24
    ESCREVA       deslocar, e ir ao estado 25
    NOVALINHA     deslocar, e ir ao estado 26
    RETORNE       deslocar, e ir ao estado 27
    INTCONST      deslocar, e ir ao estado 28
    CARCONST      deslocar, e ir ao estado 29
    ID            deslocar, e ir ao estado 30
    SE            deslocar, e ir ao estado 31
    ENQUANTO      deslocar, e ir ao estado 32
    NEG           deslocar, e ir ao estado 33
    MENOS         deslocar, e ir ao estado 34
    PONTOVIRGULA  deslocar, e ir ao estado 35
    ABREPARENT    deslocar, e ir ao estado 36
    ABRECHAVE     deslocar, e ir ao estado 10

    $padrão  reduzir usando a regra 18 (ListaComando)

    Bloco         ir ao estado 37
    ListaComando  ir ao estado 68
    Comando       ir ao estado 39
    Expr          ir ao estado 40
    OrExpr        ir ao estado 41
    AndExpr       ir ao estado 42
    EqExpr        ir ao estado 43
    DesigExpr     ir ao estado 44
    AddExpr       ir ao estado 45
    MulExpr       ir ao estado 46
    UnExpr        ir ao estado 47
    PrimExpr      ir ao estado 48


Estado 40

   21 Comando: Expr • PONTOVIRGULA

    PONTOVIRGULA  deslocar, e ir ao estado 69


Estado 41

   31 Expr: OrExpr •
   33 OrExpr: OrExpr • OU AndExpr

    OU  deslocar, e ir ao estado 70

    $padrão  reduzir usando a regra 31 (Expr)


Estado 42

   34 OrExpr: AndExpr •
   35 AndExpr: AndExpr • E EqExpr

    E  deslocar, e ir ao estado 71

    $padrão  reduzir usando a regra 34 (OrExpr)


Estado 43

   36 AndExpr: EqExpr •
   37 EqExpr: EqExpr • EQ DesigExpr
   38       | EqExpr • NEQ DesigExpr

    EQ   deslocar, e ir ao estado 72
    NEQ  deslocar, e ir ao estado 73

    $padrão  reduzir usando a regra 36 (AndExpr)


Estado 44

   39 EqExpr: DesigExpr •
   40 DesigExpr: DesigExpr • MENOR AddExpr
   41          | DesigExpr • MAIOR AddExpr
   42          | DesigExpr • GEQ AddExpr
   43          | DesigExpr • LEQ AddExpr

    LEQ    deslocar, e ir ao estado 74
    GEQ    deslocar, e ir ao estado 75
    MENOR  deslocar, e ir ao estado 76
    MAIOR  deslocar, e ir ao estado 77

    $padrão  reduzir usando a regra 39 (EqExpr)


Estado 45

   44 DesigExpr: AddExpr •
   45 AddExpr: AddExpr • MAIS MulExpr
   46        | AddExpr • MENOS MulExpr

    MAIS   deslocar, e ir ao estado 78
    MENOS  deslocar, e ir ao estado 79

    $padrão  reduzir usando a regra 44 (DesigExpr)


Estado 46

   47 AddExpr: MulExpr •
   48 MulExpr: MulExpr • VEZES UnExpr
   49        | MulExpr • DIVIDE UnExpr

    VEZES   deslocar, e ir ao estado 80
    DIVIDE  deslocar, e ir ao estado 81

    $padrão  reduzir usando a regra 47 (AddExpr)


Estado 47

   50 MulExpr: UnExpr •

    $padrão  reduzir usando a regra 50 (MulExpr)


Estado 48

   53 UnExpr: PrimExpr •

    $padrão  reduzir usando a regra 53 (UnExpr)


Estado 49

   15 ListaDeclVar: Tipo ID • DeclVar PONTOVIRGULA ListaDeclVar

    VIRGULA  deslocar, e ir ao estado 12

    $padrão  reduzir usando a regra 7 (DeclVar)

    DeclVar  ir ao estado 82


Estado 50

    6 DeclVar: VIRGULA ID DeclVar •

    $padrão  reduzir usando a regra 6 (DeclVar)


Estado 51

    8 DeclFunc: ABREPARENT ListaParametros FECHAPARENT • Bloco

    ABRECHAVE  deslocar, e ir ao estado 10

    Bloco  ir ao estado 83


Estado 52

   11 ListaParametrosCont: Tipo ID •
   12                    | Tipo ID • VIRGULA ListaParametrosCont

    VIRGULA  deslocar, e ir ao estado 84

    $padrão  reduzir usando a regra 11 (ListaParametrosCont)


Estado 53

    2 DeclFuncVar: Tipo ID DeclVar PONTOVIRGULA DeclFuncVar •

    $padrão  reduzir usando a regra 2 (DeclFuncVar)


Estado 54

   23 Comando: LEIA ID • PONTOVIRGULA

    PONTOVIRGULA  deslocar, e ir ao estado 85


Estado 55

   25 Comando: ESCREVA CONSTSTRING • PONTOVIRGULA

    PONTOVIRGULA  deslocar, e ir ao estado 86


Estado 56

   24 Comando: ESCREVA Expr • PONTOVIRGULA

    PONTOVIRGULA  deslocar, e ir ao estado 87


Estado 57

   26 Comando: NOVALINHA PONTOVIRGULA •

    $padrão  reduzir usando a regra 26 (Comando)


Estado 58

   22 Comando: RETORNE Expr • PONTOVIRGULA

    PONTOVIRGULA  deslocar, e ir ao estado 88


Estado 59

   32 Expr: ID RECEBE • Expr

    INTCONST    deslocar, e ir ao estado 28
    CARCONST    deslocar, e ir ao estado 29
    ID          deslocar, e ir ao estado 30
    NEG         deslocar, e ir ao estado 33
    MENOS       deslocar, e ir ao estado 34
    ABREPARENT  deslocar, e ir ao estado 36

    Expr       ir ao estado 89
    OrExpr     ir ao estado 41
    AndExpr    ir ao estado 42
    EqExpr     ir ao estado 43
    DesigExpr  ir ao estado 44
    AddExpr    ir ao estado 45
    MulExpr    ir ao estado 46
    UnExpr     ir ao estado 47
    PrimExpr   ir ao estado 48


Estado 60

   54 PrimExpr: ID ABREPARENT • ListExpr FECHAPARENT
   55         | ID ABREPARENT • FECHAPARENT

    INTCONST     deslocar, e ir ao estado 28
    CARCONST     deslocar, e ir ao estado 29
    ID           deslocar, e ir ao estado 30
    NEG          deslocar, e ir ao estado 33
    MENOS        deslocar, e ir ao estado 34
    ABREPARENT   deslocar, e ir ao estado 36
    FECHAPARENT  deslocar, e ir ao estado 90

    Expr       ir ao estado 91
    OrExpr     ir ao estado 41
    AndExpr    ir ao estado 42
    EqExpr     ir ao estado 43
    DesigExpr  ir ao estado 44
    AddExpr    ir ao estado 45
    MulExpr    ir ao estado 46
    UnExpr     ir ao estado 47
    PrimExpr   ir ao estado 48
    ListExpr   ir ao estado 92


Estado 61

   27 Comando: SE ABREPARENT • Expr FECHAPARENT ENTAO Comando
   28        | SE ABREPARENT • Expr FECHAPARENT ENTAO Comando SENAO Comando

    INTCONST    deslocar, e ir ao estado 28
    CARCONST    deslocar, e ir ao estado 29
    ID          deslocar, e ir ao estado 30
    NEG         deslocar, e ir ao estado 33
    MENOS       deslocar, e ir ao estado 34
    ABREPARENT  deslocar, e ir ao estado 36

    Expr       ir ao estado 93
    OrExpr     ir ao estado 41
    AndExpr    ir ao estado 42
    EqExpr     ir ao estado 43
    DesigExpr  ir ao estado 44
    AddExpr    ir ao estado 45
    MulExpr    ir ao estado 46
    UnExpr     ir ao estado 47
    PrimExpr   ir ao estado 48


Estado 62

   29 Comando: ENQUANTO ABREPARENT • Expr FECHAPARENT EXECUTE Comando

    INTCONST    deslocar, e ir ao estado 28
    CARCONST    deslocar, e ir ao estado 29
    ID          deslocar, e ir ao estado 30
    NEG         deslocar, e ir ao estado 33
    MENOS       deslocar, e ir ao estado 34
    ABREPARENT  deslocar, e ir ao estado 36

    Expr       ir ao estado 94
    OrExpr     ir ao estado 41
    AndExpr    ir ao estado 42
    EqExpr     ir ao estado 43
    DesigExpr  ir ao estado 44
    AddExpr    ir ao estado 45
    MulExpr    ir ao estado 46
    UnExpr     ir ao estado 47
    PrimExpr   ir ao estado 48


Estado 63

   54 PrimExpr: ID • ABREPARENT ListExpr FECHAPARENT
   55         | ID • ABREPARENT FECHAPARENT
   56         | ID •

    ABREPARENT  deslocar, e ir ao estado 60

    $padrão  reduzir usando a regra 56 (PrimExpr)


Estado 64

   52 UnExpr: NEG PrimExpr •

    $padrão  reduzir usando a regra 52 (UnExpr)


Estado 65

   51 UnExpr: MENOS PrimExpr •

    $padrão  reduzir usando a regra 51 (UnExpr)


Estado 66

   59 PrimExpr: ABREPARENT Expr • FECHAPARENT

    FECHAPARENT  deslocar, e ir ao estado 95


Estado 67

   13 Bloco: ABRECHAVE ListaDeclVar ListaComando FECHACHAVE •

    $padrão  reduzir usando a regra 13 (Bloco)


Estado 68

   19 ListaComando: Comando ListaComando •

    $padrão  reduzir usando a regra 19 (ListaComando)


Estado 69

   21 Comando: Expr PONTOVIRGULA •

    $padrão  reduzir usando a regra 21 (Comando)


Estado 70

   33 OrExpr: OrExpr OU • AndExpr

    INTCONST    deslocar, e ir ao estado 28
    CARCONST    deslocar, e ir ao estado 29
    ID          deslocar, e ir ao estado 63
    NEG         deslocar, e ir ao estado 33
    MENOS       deslocar, e ir ao estado 34
    ABREPARENT  deslocar, e ir ao estado 36

    AndExpr    ir ao estado 96
    EqExpr     ir ao estado 43
    DesigExpr  ir ao estado 44
    AddExpr    ir ao estado 45
    MulExpr    ir ao estado 46
    UnExpr     ir ao estado 47
    PrimExpr   ir ao estado 48


Estado 71

   35 AndExpr: AndExpr E • EqExpr

    INTCONST    deslocar, e ir ao estado 28
    CARCONST    deslocar, e ir ao estado 29
    ID          deslocar, e ir ao estado 63
    NEG         deslocar, e ir ao estado 33
    MENOS       deslocar, e ir ao estado 34
    ABREPARENT  deslocar, e ir ao estado 36

    EqExpr     ir ao estado 97
    DesigExpr  ir ao estado 44
    AddExpr    ir ao estado 45
    MulExpr    ir ao estado 46
    UnExpr     ir ao estado 47
    PrimExpr   ir ao estado 48


Estado 72

   37 EqExpr: EqExpr EQ • DesigExpr

    INTCONST    deslocar, e ir ao estado 28
    CARCONST    deslocar, e ir ao estado 29
    ID          deslocar, e ir ao estado 63
    NEG         deslocar, e ir ao estado 33
    MENOS       deslocar, e ir ao estado 34
    ABREPARENT  deslocar, e ir ao estado 36

    DesigExpr  ir ao estado 98
    AddExpr    ir ao estado 45
    MulExpr    ir ao estado 46
    UnExpr     ir ao estado 47
    PrimExpr   ir ao estado 48


Estado 73

   38 EqExpr: EqExpr NEQ • DesigExpr

    INTCONST    deslocar, e ir ao estado 28
    CARCONST    deslocar, e ir ao estado 29
    ID          deslocar, e ir ao estado 63
    NEG         deslocar, e ir ao estado 33
    MENOS       deslocar, e ir ao estado 34
    ABREPARENT  deslocar, e ir ao estado 36

    DesigExpr  ir ao estado 99
    AddExpr    ir ao estado 45
    MulExpr    ir ao estado 46
    UnExpr     ir ao estado 47
    PrimExpr   ir ao estado 48


Estado 74

   43 DesigExpr: DesigExpr LEQ • AddExpr

    INTCONST    deslocar, e ir ao estado 28
    CARCONST    deslocar, e ir ao estado 29
    ID          deslocar, e ir ao estado 63
    NEG         deslocar, e ir ao estado 33
    MENOS       deslocar, e ir ao estado 34
    ABREPARENT  deslocar, e ir ao estado 36

    AddExpr   ir ao estado 100
    MulExpr   ir ao estado 46
    UnExpr    ir ao estado 47
    PrimExpr  ir ao estado 48


Estado 75

   42 DesigExpr: DesigExpr GEQ • AddExpr

    INTCONST    deslocar, e ir ao estado 28
    CARCONST    deslocar, e ir ao estado 29
    ID          deslocar, e ir ao estado 63
    NEG         deslocar, e ir ao estado 33
    MENOS       deslocar, e ir ao estado 34
    ABREPARENT  deslocar, e ir ao estado 36

    AddExpr   ir ao estado 101
    MulExpr   ir ao estado 46
    UnExpr    ir ao estado 47
    PrimExpr  ir ao estado 48


Estado 76

   40 DesigExpr: DesigExpr MENOR • AddExpr
